# protohype

./: .gitignore  CLAUDE.md  README.md
acmeask/: .env.example  Dockerfile  package.json
agent-memory/: README.md  package.json  pyproject.toml
agent-memory/.github/workflows/: ci.yml
agent-memory/client/: memory_client.py
agent-memory/deploy/: agent-memory.service  aws-setup.md  install.sh
agent-memory/docs/: PRD.md  security-audit.md
agent-memory/infra/: cdk.json  package.json
agent-memory/infra/lib/: agent-memory-stack.ts
agent-memory/src/agent_memory/: __init__.py  api.py  config.py  db.py  main.py  seeder.py  summarizer.py
agent-memory/tests/: conftest.py  test_db.py  test_embeddings.py
almanac/: .prettierignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  turbo.json  vitest.config.ts
chorus/: .dockerignore  .env.example  CLAUDE.md  Dockerfile.api  Dockerfile.audit-consumer  Dockerfile.digest  Dockerfile.worker  Makefile  README.md  cdk.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cost-dash/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  fly.toml  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
dispatch/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.pipeline  Dockerfile.web  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  (+3 more)
spastic-memory/: README.md  pyproject.toml
spastic-memory/.github/workflows/: ci.yml
spastic-memory/client/: memory_client.py
spastic-memory/deploy/: aws-setup.md  install.sh  spastic-memory.service
spastic-memory/src/spastic_memory/: __init__.py  api.py  config.py  db.py  embeddings.py  main.py  seeder.py  summarizer.py
spastic-memory/tests/: conftest.py  test_api.py  test_db.py  test_embeddings.py
(+1042 files in other folders)
